docs-archive/apache-airflow-providers-amazon/9.6.1/_sources/_api/airflow/providers/amazon/aws/sensors/quicksight/index.rst.txt
airflow.providers.amazon.aws.sensors.quicksight
===============================================

.. py:module:: airflow.providers.amazon.aws.sensors.quicksight


Classes
-------

.. autoapisummary::

   airflow.providers.amazon.aws.sensors.quicksight.QuickSightSensor


Module Contents
---------------

.. py:class:: QuickSightSensor(*, data_set_id, ingestion_id, **kwargs)

   Bases: :py:obj:`airflow.providers.amazon.aws.sensors.base_aws.AwsBaseSensor`\ [\ :py:obj:`airflow.providers.amazon.aws.hooks.quicksight.QuickSightHook`\ ]


   Watches for the status of an Amazon QuickSight Ingestion.

   .. seealso::
       For more information on how to use this sensor, take a look at the guide:
       :ref:`howto/sensor:QuickSightSensor`

   :param data_set_id:  ID of the dataset used in the ingestion.
   :param ingestion_id: ID for the ingestion.
   :param aws_conn_id: The Airflow connection used for AWS credentials.
       If this is ``None`` or empty then the default boto3 behaviour is used. If
       running Airflow in a distributed manner and aws_conn_id is None or
       empty, then default boto3 configuration would be used (and must be
       maintained on each worker node).
   :param region_name: AWS region_name. If not specified then the default boto3 behaviour is used.
   :param verify: Whether or not to verify SSL certificates. See:
       https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html
   :param botocore_config: Configuration dictionary (key-values) for botocore client. See:
       https://botocore.amazonaws.com/v1/documentation/api/latest/reference/config.html


   .. py:attribute:: aws_hook_class


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('data_set_id', 'ingestion_id', 'aws_conn_id')



   .. py:attribute:: data_set_id


   .. py:attribute:: ingestion_id


   .. py:attribute:: success_status
      :value: 'COMPLETED'



   .. py:attribute:: errored_statuses
      :value: ('FAILED', 'CANCELLED')



   .. py:method:: poke(context)

      Pokes until the QuickSight Ingestion has successfully finished.

      :param context: The task context during execution.
      :return: True if it COMPLETED and False if not.



